<resources>
    <string name="app_name">Masquerade</string>
    <string name="app_name_cap">MASQUERADE</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="search_hint">Messages, names, etc.</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_nickname">Nickname</string>
    <string name="setting_title">PROFILE SETTINGS</string>
    <string name="setting_mask">Avatar</string>
    <string name="first_label">Female</string>
    <string name="second_label">Male</string>
    <string name="third_label">Other</string>
    <string name="setting_gender">Gender\:</string>
    <string name="title_activity_tag">selectTag</string>
    <string name="chat">Chat!</string>
    <string name="title_activity_friend">friendActivity</string>
    <string name="check">Check Details</string>

</resources>
