<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@id/relative"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:fontFamily="@font/candara"
            android:text="@string/setting_title"
            android:textColor="@color/colorAccent" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@id/setting_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ava_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Profile Avatar"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/display"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/display"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/pic"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />
        </android.support.constraint.ConstraintLayout>

        <HorizontalScrollView
            android:id="@+id/masks"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/ava_display"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:clickable="true"
            android:fillViewport="true"
            android:focusable="true"
            android:foregroundGravity="center"
            android:padding="15dp"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask1" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask2" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask3" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask4" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask5" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask6" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:cropToPadding="false"
                    android:padding="5dp"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/mask7" />

            </LinearLayout>
        </HorizontalScrollView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/masks"
            android:layout_marginTop="66dp"
            android:hint="@string/setting_nickname"
            android:textColorHint="@color/colorWhite"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            app:errorEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="14" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_below="@+id/input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_alignBottom="@+id/gender"
                android:layout_margin="5dp"
                android:onClick="checkButton"
                android:text="@string/second_label" />

            <RadioButton
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/gender"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="checkButton"
                android:text="@string/first_label" />

            <RadioButton
                android:id="@+id/third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="checkButton"
                android:text="@string/third_label" />

        </RadioGroup>


    </RelativeLayout>

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="8dp"
        android:onClick="confirmInput"
        android:text="confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative" />
</android.support.constraint.ConstraintLayout>